@@ -1,5 +1,9 @@
 2016-08-09  Bastian Maerkisch  <bmaerkisch@web.de>
 
+	* src/win/wmenu.c:  Loading of icon images requires GDI+.  Add an error
+	message if support for it is not compiled in.  Fix the case when
+	GNUPLOT_SHARE_DIR is not defined.
+
 	* term/svg.trm:  The change on 2016-08-05 did not handle the case
 	of GNUPLOT_JS_DIR being undefined.
 
